fixing error handler
